2006-10-25  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bumped version up to 2.1.0
	* Consistent GPL licensing, copyright statements

2006-10-24  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* License comments updated, removed older references to AFL

2006-10-23  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* YARPConfig.cmake fixed so that windows paths with 
	spaces are OK.  Fixes bug 1582945.

2006-10-07  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bugfix - PortReaderBuffer was not always returning 
	messages in the right order, oops!

2006-09-14  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Integrated with ffmpeg for reading audio/visual material
	* Bugfix for sound network format
	* C# swig interface tested (added to Java, Perl, Python, ...)

2006-09-01  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Fixed bug where non-buffered Port closed with data pending 
	would wait for that to get read
	* Fixed ports so you can open and close them repeatedly
	* Made some Solaris fixes - YARP works there now!
	* Integrated opencv_grabber
	* Added in some docs developed for summer school

2006-08-24  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bumped version up to 2.0.7
	* Started portaudio device wrapper -- seems a good library
	for doing cross-platform audio

2006-07-28  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Fixed some problems picked up at summer school.
	Including: representation of doubles on Mac OSX
	(thanks Anthony Truchet!); buffering default for
	BufferedPort set to lossy (thanks to lots of people);
	no longer permit multiple connections between
	a single source-target port pair; set orientation
	in IPL structure associated with images.

2006-07-14  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Fixed some problems that valgrind picked up.  The
	biggest was a mismatched constructor/destructor for an
	class derived from ACE in PortCorePacket.h.
