@@ -1,7 +1,7 @@
 // -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
 
 /*
- * Copyright (C) 2006 Paul Fitzpatrick
+ * Copyright (C) 2006 Paul Fitzpatrick, Jonas Ruesch
  * CopyPolicy: Released under the terms of the GNU GPL v2.0.
  *
  */
